<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Navigation Drawer</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="drawer_text">Navigation Drawer example.</string>
    <string name="cc_default_settings">default settings: %s</string>
    <string name="cc_language">language: track %s</string>
    <string name="cc_language_track">track: %s</string>
    <string name="cc_options">cc_options</string>
    <string name="cc_internal_options">cc_internal_options</string>
    <string name="cc_options_color">color: %s</string>
    <string name="cc_options_highlight_color">border color: %s</string>
    <string name="cc_options_opacity">opacity: %s</string>
    <string name="cc_options_highlight_opacity">border opacity: %s</string>
    <string name="cc_options_cc_on">closed captions: %s</string>
    <string name="cc_options_text">text</string>
    <string name="cc_options_bkg">background</string>
    <string name="cc_options_display">display</string>
    <string name="cc_options_color_red">Red</string>
    <string name="cc_options_color_blue">Blue</string>
    <string name="cc_options_color_black">Black</string>
    <string name="cc_options_color_yellow">Yellow</string>
    <string name="cc_options_color_white">White</string>
    <string name="cc_options_color_magenta">Magenta</string>
    <string name="cc_options_color_green">Green</string>
    <string name="cc_options_color_cyan">Cyan</string>
    <string name="cc_options_opacity_solid">Solid</string>
    <string name="cc_options_opacity_semitransparent">Semi-transparent</string>
    <string name="cc_options_opacity_transparent">Transparent</string>
    <string name="cc_options_size_small">Small</string>
    <string name="cc_options_size_normal">Normal</string>
    <string name="cc_options_size_big">Big</string>
    <string name="cc_options_none">None</string>

    <string name="cc_options_no_edges">No edge</string>
    <string name="cc_options_drop_shadowed_edges">Drop shadowed edges</string>
    <string name="cc_options_raised_edges">Raised edges</string>
    <string name="cc_options_depressed_edges">Depressed edges</string>
    <string name="cc_options_uniform_edges">Uniform edges</string>

    <string name="cc_options_edges_raised">Raised</string>
    <string name="cc_options_edges_depressed">Depressed</string>
    <string name="cc_options_edge_uniform">Uniform</string>
    <string name="cc_options_text_font">Font: %s</string>
    <string name="cc_options_edges_shadow">Shadow</string>
    <string name="cc_options_text_size">size: %s</string>
    <string name="cc_options_text_edges">character edges: %s</string>
    <string name="cc_options_preview">the subtitles in your app will look like this</string>
    <string name="cc_options_text_undefined">Undefined</string>
    <string name="cc_options_text_mono_serif">Courier</string>
    <string name="cc_options_text_prop_serif">Times europa</string>
    <string name="cc_options_text_mono_sans">Frutiger mono</string>
    <string name="cc_options_text_prop_sans">Frutiger</string>
    <string name="cc_options_text_casual">Dom casual</string>
    <string name="cc_options_text_cursive">Kaufmann</string>
    <string name="cc_options_text_captials">Plate gothic</string>
    <string name="cc_options_kitkat_message">Closed captioning is turned on at the system level on your tablet and cannot be turned off\nin Contour. To turn captioning off, exit Contour and turn off captioning in your tablet\'s Settings app.</string>
    <string name="cc_options_kitkat_override">use Android caption settings: %s</string>
    <string name="ns_menu_open">dummy</string>
    <string name="ns_menu_close">dummy2</string>


</resources>
