<?xml version="2.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:id="@+id/leaf"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="wrap_content">
    <!--Start of row-->
    <LinearLayout
            android:id="@+id/cc_text_edge_none"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@android:drawable/list_selector_background"
            android:clickable="true"
            android:focusable="true"
            android:descendantFocusability="blocksDescendants"
            android:paddingTop="20dp"
            android:paddingBottom="20dp"
            android:orientation="horizontal">

        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="15dp"
                android:paddingLeft="10dp"
                android:textColor="#FFFFFF"
                android:singleLine="true"
                android:clickable="false"
                android:textSize="20sp"
                android:text="@string/cc_options_no_edges"
                />
    </LinearLayout>
    <ImageView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:src="#DADADC"/>
    <!--End of row -->

    <!--Start of row-->
    <LinearLayout
            android:layout_width="fill_parent"
            android:id="@+id/cc_text_edge_drop"
            android:layout_height="wrap_content"
            android:background="@android:drawable/list_selector_background"
            android:clickable="true"
            android:focusable="true"
            android:descendantFocusability="blocksDescendants"
            android:paddingTop="20dp"
            android:paddingBottom="20dp"
            android:orientation="horizontal">

        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="15dp"
                android:paddingLeft="10dp"
                android:textColor="#FFFFFF"
                android:singleLine="true"
                android:clickable="false"
                android:textSize="20sp"
                android:text="@string/cc_options_drop_shadowed_edges"
                />
    </LinearLayout>
    <ImageView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:src="#DADADC"/>
    <!--End of row -->
    <!--Start of row-->
    <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@android:drawable/list_selector_background"
            android:clickable="true"
            android:id="@+id/cc_text_edge_raised"
            android:focusable="true"
            android:descendantFocusability="blocksDescendants"
            android:paddingTop="20dp"
            android:paddingBottom="20dp"
            android:orientation="horizontal">

        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="15dp"
                android:paddingLeft="10dp"
                android:textColor="#FFFFFF"
                android:singleLine="true"
                android:clickable="false"
                android:textSize="20sp"
                android:text="@string/cc_options_raised_edges"
                />
    </LinearLayout>
    <ImageView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:src="#DADADC"/>

    <!--Start of row-->
    <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@android:drawable/list_selector_background"
            android:clickable="true"
            android:id="@+id/cc_text_edge_depressed"
            android:focusable="true"
            android:descendantFocusability="blocksDescendants"
            android:paddingTop="20dp"
            android:paddingBottom="20dp"
            android:orientation="horizontal">

        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="15dp"
                android:paddingLeft="10dp"
                android:textColor="#FFFFFF"
                android:singleLine="true"
                android:clickable="false"
                android:textSize="20sp"
                android:text="@string/cc_options_depressed_edges"
                />
    </LinearLayout>
    <ImageView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:src="#DADADC"/>
    <!--Start of row-->
    <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@android:drawable/list_selector_background"
            android:clickable="true"
            android:id="@+id/cc_text_edge_uniform"
            android:focusable="true"
            android:descendantFocusability="blocksDescendants"
            android:paddingTop="20dp"
            android:paddingBottom="20dp"
            android:orientation="horizontal">

        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="15dp"
                android:paddingLeft="10dp"
                android:textColor="#FFFFFF"
                android:singleLine="true"
                android:clickable="false"
                android:textSize="20sp"
                android:text="@string/cc_options_uniform_edges"
                />
    </LinearLayout>
    <ImageView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:src="#DADADC"/>
</LinearLayout>

