<?xml version="2.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:id="@+id/leaf"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">
    <LinearLayout
            android:id="@+id/captions_small"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@android:drawable/list_selector_background"
            android:clickable="true"
            android:focusable="true"
            android:descendantFocusability="blocksDescendants"
            android:paddingTop="20dp"
            android:paddingBottom="20dp"
            android:orientation="horizontal">

        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="15dp"
                android:paddingLeft="10dp"
                android:textColor="#FFFFFF"
                android:singleLine="true"
                android:clickable="false"
                android:textSize="16sp"
                android:text="@string/cc_options_size_small"
                />
    </LinearLayout>
    <ImageView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:src="#DADADC"/>
    <!--Start of row-->
    <LinearLayout
            android:id="@+id/captions_medium"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@android:drawable/list_selector_background"
            android:clickable="true"
            android:focusable="true"
            android:descendantFocusability="blocksDescendants"
            android:paddingTop="20dp"
            android:paddingBottom="20dp"
            android:orientation="horizontal">

        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="15dp"
                android:paddingLeft="10dp"
                android:textColor="#FFFFFF"
                android:singleLine="true"
                android:clickable="false"
                android:textSize="20sp"
                android:text="@string/cc_options_size_normal"
                />
    </LinearLayout>
    <ImageView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:src="#DADADC"/>
    <!--Start of row-->
    <LinearLayout
            android:id="@+id/captions_big"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@android:drawable/list_selector_background"
            android:clickable="true"
            android:focusable="true"
            android:descendantFocusability="blocksDescendants"
            android:paddingTop="20dp"
            android:paddingBottom="20dp"
            android:orientation="horizontal">

        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="15dp"
                android:paddingLeft="10dp"
                android:textColor="#FFFFFF"
                android:singleLine="true"
                android:clickable="false"
                android:textSize="24sp"
                android:text="@string/cc_options_size_big"
                />
    </LinearLayout>
    <ImageView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:src="#DADADC"/>
    <!--End of row -->
</LinearLayout>

